--- a/my-app/src/Sidebar/Sidebar.css
+++ b/my-app/src/Sidebar/Sidebar.css
@@ -50,10 +50,17 @@
   transform: scale(1.1);
 }
 
+/* Masquer le bouton hamburger sur les écrans larges */
+@media (min-width: 1000px) {
+  .hamburger {
+    display: none; /* Masque le bouton hamburger */
+  }
+}
+
 /* Styles pour écran < 1000px */
-@media (max-width: 1284px) {
+@media (max-width: 1000px) {
   .sidebar {
-    display: none; /* Cache la sidebar par défaut */
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -66,7 +73,7 @@
   }
 
   .sidebar.open {
-    display: flex; /* Affiche la sidebar en plein écran */
+    display: flex;
     flex-direction: column;
   }
 
@@ -74,20 +81,11 @@
     display: block;
     position: fixed;
     top: 10px;
-    left: 10px;
+    right: 10px; /* Positionne le bouton en haut à droite */
     background: none;
     border: none;
     font-size: 24px;
     color: #000;
     z-index: 20;
-  }
-
-  .sidebar-logo {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-  }
-
-  .sidebar-item {
-    margin: 20px 0;
   }
 }
